2004-01-08  Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove *C_FILES.

2004-01-08  Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add libs to CLEANFILES
	Set lib*_g_a_SOURCES = lib*_a_SOURCES.

2004-01-08  Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Build lib*$(LIB_VARIANT).a instead of
	$(ARCH)/lib*.a.

2004-01-07	Joel Sherrill <joel@OARcorp.com>

	* rtems/rtems_bsdnet_internal.h: Include rtems/cdefs.h so things
	compile.

2004-01-07  Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Build library using EXTRA_LIBRARIES and automake rules.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.

2003-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add $(dirstamp) to compilation rules.

2003-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Fix libc_OBJS.

2003-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add $(dirstamp) to preinstallation rules.
	Restore libc/$(ARCH)/lib.a.

2003-11-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* libc/Makefile.am: Remove.
	* lib/Makefile.am: Remove.
	* Makefile.am: Merge-in the Makefile.ams above.

2003-11-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtems/rtems_bsdnet_internal.h: Include rtems/cdefs.h instead of
	sys/cdefs.h (Nonportable).
	* wrapup/Makefile.am: Removed.
	* Makefile.am: Reworked.

2003-09-15	Jay Monkman <jtm@smoothsmoothie.com>

	PR 482/networking
	* rtems/rtems_glue.c: Network interfaces cant be taken down

2003-09-15	Jay Monkman <jtm@smoothsmoothie.com>

	PR 481/networking
	* net/ethernet.h, net/if_arp.h, netinet/if_ether.h: Network structs
	should be packed

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* rtems/mkrootfs.c, rtems/mkrootfs.h: URL for license changed.

2003-09-02	Jiri Gaisler <jiri@gaisler.com>

	PR 476/networking
	* machine/in_cksum.h: Fix in_cksum calculation on SPARC.

2003-08-06	Till Strauman <strauman@slac.stanford.edu>
